--- a/create-request.html
+++ b/create-request.html
@@ -70,6 +70,11 @@
                 </div>
 
                 <div>
+                    <label for="skillpoints" style="display:block;margin-bottom:5px;font-weight:600;">Скиллпоинты (вознаграждение)</label>
+                    <input type="number" id="skillpoints" min="0" value="0" required style="width:100%;padding:10px;border-radius:8px;border:1px solid #e5e7eb;">
+                </div>
+
+                <div>
                     <button type="submit" class="btn-create">Создать запрос</button>
                 </div>
             </form>
