--- a/profile.html
+++ b/profile.html
@@ -82,6 +82,13 @@
                     <a href="#" id="logoutBtn" class="btn-logout" style="background:#ef4444; margin-left:8px">Выйти</a>
                 </div>
             </div>
+            <div style="margin-left:auto;text-align:right;display:flex;flex-direction:column;gap:12px;align-items:flex-end">
+                <div id="userSkillpoints" style="border:1px solid #e6e9ef;padding:12px 16px;border-radius:10px;min-width:110px;">
+                    <div style="font-size:12px;color:#6b7280">SKILL POINTS</div>
+                    <div id="userSkillpointsValue" style="font-weight:700;font-size:18px;color:#0f172a">0</div>
+                </div>
+                <a href="customize-profile.html" id="customizeProfileBtn" class="btn-logout" style="background:#2563eb;color:#fff;text-decoration:none;padding:10px 14px;border-radius:8px">Настроить профиль</a>
+            </div>
         </div>
 
         <section class="mt-18" style="margin-top:18px">
