--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo">
             <a href="#">
                 <img src="images/SkillUpSquare.png" alt="SkillUp logo" class="logo-img">
-                <span class="brand-text">SkillUp<span>.ru</span></span>
+                <span class="brand-text">SkillUp</span>
             </a>
         </div>
 
@@ -149,7 +149,7 @@
     <div class="container footer-inner">
 
         <div class="footer-left">
-            <div class="logo footer-logo"><a href="#">SkillUp<span>.ru</span></a></div>
+            <div class="logo footer-logo"><a href="#">SkillUp</a></div>
             <p class="footer-copy">© 2025 SkillUp.</p>
         </div>
 
