--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
         <div class="logo">
             <a href="index.html">
                 <img src="images/SkillUpSquare.png" alt="SkillUp logo" class="logo-img">
-                <span class="brand-text">SkillUp<span>.ru</span></span>
+                <span class="brand-text">SkillUp</span>
             </a>
         </div>
         <div class="auth">
