--- a/request.html
+++ b/request.html
@@ -14,7 +14,7 @@
     <div class="logo">
       <a href="index.html">
         <img src="images/SkillUpSquare.png" alt="SkillUp logo" class="logo-img">
-        <span class="brand-text">SkillUp<span>.ru</span></span>
+        <span class="brand-text">SkillUp</span>
       </a>
     </div>
     <div class="auth">
@@ -35,7 +35,7 @@
 <footer class="site-footer">
   <div class="container footer-inner">
     <div class="footer-left">
-      <div class="logo footer-logo"><a href="index.html">SkillUp<span>.ru</span></a></div>
+      <div class="logo footer-logo"><a href="index.html">SkillUp</a></div>
       <p class="footer-copy">© 2025 SkillUp.</p>
     </div>
   </div>
